no-private-identifier might be the most annoying lint on earth

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,5 +19,7 @@
 		"plugin:@typescript-eslint/recommended",
 		"plugin:roblox-ts/recommended"
 	],
-	"rules": {}
+	"rules": {
+    "roblox-ts/no-private-identifier": "off"
+  }
 }
