disable lints for TS truthiness

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
 		"plugin:roblox-ts/recommended"
 	],
 	"rules": {
-    "roblox-ts/no-private-identifier": "off"
+    "roblox-ts/no-private-identifier": "off",
+		"roblox-ts/lua-truthiness": "off"
   }
 }
